fix: update content and build config

--- a/magic-portfolio/package.json
+++ b/magic-portfolio/package.json
@@ -13,6 +13,7 @@
     "@mdx-js/loader": "^3.1.0",
     "@next/mdx": "^16.0.10",
     "@once-ui-system/core": "^1.5.6",
+    "@tailwindcss/postcss": "^4.1.18",
     "classnames": "^2.5.1",
     "cookie": "^1.0.2",
     "gray-matter": "^4.0.3",
@@ -31,8 +32,17 @@
     "@types/node": "^20.17.30",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.5",
+    "autoprefixer": "^10.4.23",
     "eslint": "^9.25.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.8.3",
     "tzdata": "^1.0.44"
-  }
+  },
+  "description": "Magic Portfolio is a simple, clean, beginner-friendly portfolio template. It supports an MDX-based content system for projects and blog posts, an about / CV page and a gallery.",
+  "main": ".lintstagedrc.js",
+  "keywords": [],
+  "author": "",
+  "type": "module",
+  "license": "ISC"
 }
