--- a/magic-portfolio/package.json
+++ b/magic-portfolio/package.json
@@ -14,6 +14,7 @@
     "@next/mdx": "^16.0.10",
     "@once-ui-system/core": "^1.5.6",
     "@tailwindcss/postcss": "^4.1.18",
+    "@vercel/speed-insights": "^1.3.1",
     "classnames": "^2.5.1",
     "cookie": "^1.0.2",
     "gray-matter": "^4.0.3",
