--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@mdx-js/react": "^3.1.1",
     "@next/mdx": "^16.1.6",
     "@once-ui-system/core": "^1.6.0",
+    "@tailwindcss/postcss": "^4.1.18",
     "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
     "acorn": "^8.15.0",
@@ -17,7 +18,7 @@
     "ansi-styles": "^4.3.0",
     "argparse": "^2.0.1",
     "astring": "^1.9.0",
-    "autoprefixer": "^10.4.23",
+    "autoprefixer": "^10.4.24",
     "bail": "^2.0.2",
     "balanced-match": "^1.0.2",
     "baseline-browser-mapping": "^2.9.11",
@@ -313,7 +314,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/imanuelhelsen-png/cv-portofolio.git"
